# Eon

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Eon.sln  Makefile  README.md  run.sh
.codelite/: Eon.session  refactoring.db
Assets/: Fragment.glsl  Fragment2.glsl  Vertex.glsl
CMake/: FindSDL2.cmake  FindSOIL.cmake
Eon/: CMakeLists.txt  Eon.vcxproj  Eon.vcxproj.filters
Eon/Include/: Assets.h  Common.h  Config.h  Eon.h  Eon.hpp  Game.h  Game.hpp  Input.h  Mode.h  Timer.h  Types.h  World.h
Eon/Include/Assets/: Assets.h
Eon/Include/Entity/: Component.h  Component.hpp  Entity.h  Entity.hpp
Eon/Include/Entity/Components/: Components.h  MeshComponent.h  RenderComponent.h  TransformComponent.h
Eon/Include/Graphics/: Camera.h  Color.h  FragmentShader.h  Material.h  Mesh.h  Renderer.h  Shader.h  Texture.h  Triangle.h  Vertex.h  VertexShader.h
Eon/Include/Math/: Mat4.h  Math.h  Vec2.h  Vec3.h  Vec3.hpp  Vec4.h
Eon/Include/Renderer/: Color.hpp  Mesh.hpp  Renderer.hpp
Eon/Source/: Assets.cpp  Game.cpp  Input.cpp  Timer.cpp  World.cpp
Eon/Source/Assets/: Assets.cpp
Eon/Source/Entity/: Component.cpp  Entity.cpp
Eon/Source/Entity/Components/: CameraComponent.cpp  RenderComponent.cpp  TransformComponent.cpp
Eon/Source/Graphics/: Camera.cpp  Color.cpp  FragmentShader.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Triangle.cpp  Vertex.cpp  VertexShader.cpp
Eon/Source/Math/: Mat4.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
Eon/Source/Renderer/: Color.cpp  Mesh.cpp  Renderer.cpp
Sandbox/: CMakeLists.txt  FPSCamera.cpp  FPSCamera.h  GameMode.cpp  GameMode.h  Launcher.cpp  Main.cpp  Sandbox.vcxproj  Sandbox.vcxproj.filters  SandboxGame.cpp  SandboxGame.h
Tests/: CMakeLists.txt  Math.cpp
